<resources>
    <string name="app_name"><font color='black'>Escutas</font></string>
    <string name="menu_bottom_navigation_news_feed">Feed</string>
    <string name="menu_bottom_navigation_map">Mapa</string>
    <string name="menu_bottom_navigation_calendar">Calendário</string>
    <string name="menu_bottom_navigation_gallery">Galeria</string>
    <string name="activity_login_about"><font color='green'>Sobre</font></string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_register">Registe-se</string>
    <string name="activity_login_noaccount">Não tem conta?</string>
    <string name="activity_login_password">Palavra-chave</string>
    <string name="activity_login_enter"><font color='white'>Entrar</font></string>
    <string name="activity_profile_edit"><font color='white'>Editar perfil</font></string>
    <string name="activity_logout_enter"><font color='white'>Sair</font></string>
    <string name="activity_login_forgotpassword"><font color='green'>Recuperar palavra-chave</font></string>
    <string name="activity_registration_email"><font color='black'>Email </font><font color='red'>*</font></string>
    <string name="activity_registration_email_hint">utilizador@escutas.net</string>
    <string name="activity_registration_username"><font color='black'>Nome de utilizador </font><font color='red'>*</font></string>
    <string name="activity_registration_username_hint">utilizador</string>
    <string name="activity_registration_password"><font color='black'>Palavra-chave </font><font color='red'>*</font></string>
    <string name="activity_registration_password_hint">Palavra-chave</string>
    <string name="activity_registration_password_hint_repeat">Repetir palavra-chave</string>
    <string name="activity_registration_group"><font color='black'>Agrupamento </font><font color='red'>*</font></string>
    <string name="activity_registration_group_hint">Agrupamento</string>
    <string name="activity_registration_birthday"><b><font color='black'>Data de nascimento </font><font color='red'>*</font></b></string>
    <string name="activity_registration_create">Criar</string>
    <string name="activity_about_title">Sobre</string>
    <string name="activity_about_content">A presente aplicação móvel foi desenvolvida no âmbito da unidade curricular Programação de Dispositivos Móveis e Multissensoriais da oitava edição do Mestrado em Engenharia Informática da Escola Superior de Tecnologia do Instituto Politécnico do Cávado e do Ave.</string>
    <string name="activity_about_working_group">Grupo de trabalho:</string>
    <string name="activity_about_working_group_ja">Jonas Andrade - a10506@alunos.ipca.pt</string>
    <string name="activity_about_working_group_ig">Ivo Gomes - a10700@alunos.ipca.pt</string>
    <string name="activity_about_working_group_hg">Hugo Gonçalves - a10700@alunos.ipca.pt</string>
    <string name="activity_about_working_group_to">Tiago Oliveira - a21585@alunos.ipca.pt</string>
    <string name="exception_storage_create">A operação de criação de um ficheiro remoto falhou.</string>
    <string name="exception_storage_read">A operação de leitura de um ficheiro remoto falhou.</string>
    <string name="exception_storage_update">A operação de atualização de um ficheiro remoto falhou.</string>
    <string name="exception_storage_delete">A operação de eliminação de um ficheiro remoto falhou.</string>
    <string name="msg_field_black">o campo não pode estar vazio.</string>
    <string name="msg_incorrect_email">o email está incorreto.</string>
    <string name="msg_incorrect_passwords">as palavra-chave são diferentes.</string>
    <string name="msg_no_user_available">não existe nenhum utilizador disponível.</string>
    <string name="msg_user_created">o utilizador foi criado com sucesso.</string>
    <string name="msg_failed_user_create">não foi possível criar o utilizador.</string>
    <string name="msg_user_deleted">utilizador removido com sucesso.</string>
    <string name="msg_failed_user_delete">não foi possivel remover o utilizador.</string>
    <string name="msg_user_email_update">o email do utilizador foi actualizado com sucesso.</string>
    <string name="msg_failed_user_email_update">não foi possivel actualizar o email do utilizador.</string>
    <string name="msg_user_password_update">a palavra-chave do utilizador foi actualizada com sucesso.</string>
    <string name="msg_failed_user_password_update">não foi possivel actualizar a palavra-chave do utilizador.</string>
    <string name="msg_email_sent">o email foi enviado.</string>
    <string name="msg_fail_email">o email não foi enviado.</string>
    <string name="msg_user_login">o utilizador entrou.</string>
    <string name="msg_fail_user_login">o utilizador não conseguiu entrar.</string>
    <!-- TODO: Remove below strings when application is complete. -->
    <string name="tmp_title">Lorem Ipsum</string>
    <string name="tmp_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>
