<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AboutActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:titleTextColor="@color/blue">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="334dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_vector_about_landscape" />

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="300dp"
            android:layout_height="115dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/activity_about_content" />

        <TextView
            android:id="@+id/textView_working_group"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:textColorLink="@color/green"
            android:text="@string/activity_about_working_group" />

        <TextView
            android:id="@+id/textView_working_group_ja"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:autoLink="email"
            android:textColorLink="@color/green"
            android:text="@string/activity_about_working_group_ja" />

        <TextView
            android:id="@+id/textView_working_group_ig"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:autoLink="email"
            android:textColorLink="@color/green"
            android:text="@string/activity_about_working_group_ig" />

        <TextView
            android:id="@+id/textView_working_group_hg"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:autoLink="email"
            android:textColorLink="@color/green"
            android:text="@string/activity_about_working_group_hg" />

        <TextView
            android:id="@+id/textView_working_group_to"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginBottom="180dp"
            android:layout_marginTop="5dp"
            android:autoLink="email"
            android:textColorLink="@color/green"
            android:text="@string/activity_about_working_group_to" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_vector_logo_alt_notitle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>